// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/file_preview/file_progress_preview should match snapshot 1`] = `
<div
  className="file-preview post-image__column"
  data-client-id="clientId"
  key="clientId"
>
  <div
    className="post-image__thumbnail"
  >
    <div
      className="file-icon image"
    />
  </div>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
    >
      <div
        className="post-image__detail"
      >
        <FilenameOverlay
          canDownload={false}
          compactDisplay={false}
          fileInfo={
            Object {
              "name": "file",
              "percent": 50,
              "type": "image/png",
            }
          }
          handleImageClick={null}
          index="clientId"
        />
        <span
          className="post-image__uploadingTxt"
        >
          <FormattedMessage
            defaultMessage="Uploading..."
            id="admin.plugin.uploading"
            values={Object {}}
          />
          <span>
             (50%)
          </span>
        </span>
        <ProgressBar
          active={false}
          bsClass="progress-bar"
          className="post-image__progressBar"
          isChild={false}
          max={100}
          min={0}
          now={50}
          srOnly={false}
          striped={false}
        />
      </div>
    </div>
    <div>
      <a
        className="file-preview__remove"
        onClick={[Function]}
      >
        <RemoveIcon />
      </a>
    </div>
  </div>
</div>
`;

exports[`component/file_preview/file_progress_preview snapshot for percent value undefined 1`] = `
<div
  className="file-preview post-image__column"
  data-client-id="clientId"
  key="clientId"
>
  <div
    className="post-image__thumbnail"
  >
    <div
      className="file-icon image"
    />
  </div>
  <div
    className="post-image__details"
  >
    <div
      className="post-image__detail_wrapper"
    >
      <div
        className="post-image__detail"
      >
        <FilenameOverlay
          canDownload={false}
          compactDisplay={false}
          fileInfo={
            Object {
              "name": "file",
              "percent": undefined,
              "type": "image/png",
            }
          }
          handleImageClick={null}
          index="clientId"
        />
        <span
          className="post-image__uploadingTxt"
        >
          <FormattedMessage
            defaultMessage="Uploading..."
            id="admin.plugin.uploading"
            values={Object {}}
          />
          <span />
        </span>
      </div>
    </div>
    <div>
      <a
        className="file-preview__remove"
        onClick={[Function]}
      >
        <RemoveIcon />
      </a>
    </div>
  </div>
</div>
`;
